Test and Fix the bugs also add Delete book feature
