# book-network/src/main/java/com/book_network/book/BookController.java
@@ -2,10 +2,12 @@ package com.book_network.book;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestPart;
@@ -15,7 +17,6 @@ import org.springframework.web.multipart.MultipartFile;
 import com.book_network.common.PageResponse;
 
 import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -131,6 +132,13 @@ public class BookController {
 		service.uploadBookCoverPicture(file, connectedUser, bookId);
 		
 		return ResponseEntity.accepted().build();
+	}
+	
+	@DeleteMapping("/remove/{book-id}")
+	public ResponseEntity<Integer> deleteBook(@PathVariable("book-id") Integer bookId, Authentication connectedUser) {
+		
+		return ResponseEntity.ok(service.removeBook(bookId, connectedUser));
+		
 	}
 	
 	
